--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
 
 <div class='row'>
 
-<div class='col-6'>
+<div class='col-md-6'>
 
 <h4>Calculate your 1RM:</h4>
 
@@ -43,7 +43,7 @@
 
 </div>
 
-<div class='col-6'>
+<div class='col-md-6'>
 
 <h4>Working weight to hit target 1RM:</h4>
 
