--- a/templates/index.html
+++ b/templates/index.html
@@ -1,23 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Rep Max Calculator
-    </title>
+{% extends 'base.html' %}
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Material Design for Bootstrap fonts and icons -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons">
-
-    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-
-    <link rel="stylesheet" href="https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css" integrity="sha384-wXznGJNEXNG1NFsbm0ugrLFMQPWswR3lds2VeinahP8N0zJw9VWSopbjv2x7WCvX" crossorigin="anonymous">
-
-    <!-- <link rel="stylesheet" type="text/css" href="/static/style.css"> -->
-
-</head>
-<body>
+{% block content %}
 
 <div class='container-fluid'>
 
@@ -66,4 +49,4 @@
 <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
 <script src='/static/rep_max.js'></script>
 
-</body>
+{% endblock %}
