Adds image to nav bar

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,9 @@
 
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">27 White Lights</a>
+  <a class="navbar-brand">
+    <img src='/static/weight.svg' width="40" height="40">
+  </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
