--- a/templates/index.html
+++ b/templates/index.html
@@ -17,11 +17,17 @@
 <h4>Calculate your 1RM:</h4>
 
 <form action='/calculate-rep-max' id='rep-max-form'>
-    Weight (lbs): <input type='text' name='weight' id='weight'></input>
-    Reps: <input type='text' name='reps' id='reps'></input>
-    <input type=submit></input>
+    <div class='form-group'>
+        <label for="weight">Weight (lbs)</label>
+    <input type='text' name='weight' id='weight' class="form-control" placeholder="Enter weight"></input>
+    </div>
+    <div class='form-group'>
+        <label for="reps">Reps</label>
+        <input type='text' name='reps' id='reps' class="form-control" placeholder="Enter number of reps"></input>
+    </div>
+    <button type=submit class="btn btn-primary">Submit</button>
 </form>
-
+<br>
 <h4>1 rep max: <span id='rep-max'></span></h4><br>
 
 </div>
@@ -31,11 +37,17 @@
 <h4>Working weight to hit target 1RM:</h4>
 
 <form action='/calculate-working-weight' id='weight-form'>
-    Target 1RM: <input type='text' name='target-max' id='target-max'></input>
-    Reps: <input type='text' name='reps' id='reps2'></input>
-    <input type=submit></input>
+    <div class='form-group'>
+        <label for="target-max">Target 1RM</label>
+        <input type='text' name='target-max' id='target-max' class="form-control" placeholder="Enter weight"></input>
+    </div>
+    <div class='form-group'>
+        <label for="reps2">Reps</label>
+    <input type='text' name='reps' id='reps2' class="form-control" placeholder="Enter number of reps"></input>
+    </div>
+    <button type=submit class="btn btn-primary">Submit</button>
 </form>
-
+<br>
 <h4>Weight: <span id='working-weight'></span></h4>
 
 
