--- a/templates/offseason.html
+++ b/templates/offseason.html
@@ -7,20 +7,29 @@
 <h4>Enter your latest rep max:</h4>
 <br>
 <form action='/calculate-next-rep-max' id='next-max'>
-    Weight (lbs): <input type='text' name='weight' id='weight'></input>
-    Reps: <input type='text' name='reps' id='reps'></input>
-   <select name='week' id='week'>
-        <option value=0> Week 1 </option>
-        <option value=1> Week 2 </option>
-        <option value=2> Week 3 </option>
-        <option value=3> Week 4 </option>
-        <option value=4> Week 5 </option>
-        <option value=5> Week 6 </option>
-    </select>
-    <input type=submit></input>
+    <div class='form-group'>
+        <label for="weight">Weight (lbs)</label>
+    <input type='text' name='weight' id='weight' class="form-control" placeholder="Enter weight"></input>
+    </div>
+    <div class='form-group'>
+        <label for="reps">Reps</label>
+        <input type='text' name='reps' id='reps' class="form-control" placeholder="Enter number of reps"></input>
+    </div>
+    <label for="week">Week of training?</label>
+    <div class='form-group'>
+        <select name='week' id='week' class="form-control">
+            <option value=0> Week 1 </option>
+            <option value=1> Week 2 </option>
+            <option value=2> Week 3 </option>
+            <option value=3> Week 4 </option>
+            <option value=4> Week 5 </option>
+            <option value=5> Week 6 </option>
+        </select>
+    </div>
+    <button type=submit class="btn btn-primary">Submit</button>
 </form>
-
-Rep scheme: 
+<br>
+<h5>Rep scheme:</h5>
 <div id='plan'></div>
 
 </div>
